# InfinBankBozorSmartPark

./: .gitignore  QUICK_START.md  README.md  chech_test.py  create_exe.py  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff_check.py  run.py  test.http  testjson.http
config/: asgi.py  settings.py  urls.py
smartpark/: admin.py  apps.py  barier_control.py  consumers.py  models.py  routing.py  signals.py  tests.py  urls.py  utils.py  view_unikassa.py  views.py
smartpark/templates/: unpaid_entries.html
templates/: base.html  cars_management.html  detailed_entries.html  freeplatenumber.html  home.html  login.html  soliq_statistika.html
utils/: __init__.py
